--- a/ATPases_properties_trees/readme
+++ b/ATPases_properties_trees/readme
@@ -1,1 +1,1 @@
-This pictures show distribution of ATPase across different GTDB phyla.
+These pictures show distribution of ATPase across different GTDB phyla.
